--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "4              1  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,13 +363,13 @@
        "T2        16\n",
        "T25        3\n",
        "T14        3\n",
-       "T29        2\n",
        "T15        2\n",
+       "T29        2\n",
        "T17        1\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x199d40a1248>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24400c93888>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
     "\n",
     "# Replace in dataframe\n",
     "for app in replace_application:\n",
-    "    application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
+    "    application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app, 'Other')\n",
     "    \n",
     "# Check to make sure binning was successful\n",
     "application_df.APPLICATION_TYPE.value_counts()"
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x199d4286f88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24401161c88>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -524,18 +524,18 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine which values to replace if counts are less than ..?\n",
-    "replace_class = list(classification_count[classification_count < 1000].index)\n",
+    "replace_class = list(classification_count[classification_count < 1750].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in replace_class:\n",
-    "    application_df.CLASSIFICATION = application_df.CLASSIFICATION.replace(cls,\"Other\")\n",
+    "    application_df.CLASSIFICATION = application_df.CLASSIFICATION.replace(cls, 'Other')\n",
     "    \n",
     "# Check to make sure binning was successful\n",
     "application_df.CLASSIFICATION.value_counts()"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,9 @@
    ],
    "source": [
     "# Merge one-hot encoded features and drop the originals\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df = application_df.merge(encode_df,left_index=True, right_index=True)\n",
+    "application_df = application_df.drop(application_cat,1)\n",
+    "application_df.head()"
    ]
   },
   {
@@ -847,10 +849,11 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "y= application_df.IS_SUCCESSFUL\n",
+    "X= application_df.drop(columns=[\"IS_SUCCESSFUL\"])\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -880,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -905,18 +910,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer1 =  8\n",
+    "hidden_nodes_layer2 = 5\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -929,7 +936,7 @@
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
@@ -939,7 +946,7 @@
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "fit_model = nn.fit(X_train_scaled,y_train,epochs=100)"
    ]
   },
   {
@@ -958,7 +965,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export the results to an HDF5 file\n",
+    "nn.save('AlphabetSoupCharity.h5')"
+   ]
   }
  ],
  "metadata": {
