--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -941,6 +941,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import checkpoint dependencies \n",
+    "import os\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "\n",
+    "# Define the checkpoint path and filenames\n",
+    "os.makedirs (\"checkpoints/\", exist_ok=True)\n",
+    "checkpoint_path = \"checkpoints/weights.{epoch:02d}.hdf5\"\n",
+    "\n",
+    "#Create a callback that saves the model's weights every 5 epochs\n",
+    "cp_callback = ModelCheckpoint(\n",
+    "    filepath=checkpoint_path,\n",
+    "    verbose=1,\n",
+    "    save_weights_only=True,\n",
+    "    save_freq=4020)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
